added two new fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
         <com.google.android.material.appbar.AppBarLayout
@@ -18,20 +19,20 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
         </com.google.android.material.appbar.AppBarLayout>
 
+        <TextView
+            android:id="@+id/all_tasks_title"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorTextPrimary"
+            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content"
+            android:text="@string/all_tasks"/>
 
-        <!--    აქ წავა თქვენი ფრაგმენტი/ფრაგმენტები    -->
-        <!--    თუ NavigationComponent იყენებთ, NavHost ფრაგმენტით ჩაანაცვლეთ    -->
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent"/>
 
-            <TextView
-                android:id="@+id/circle_option"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="20dp"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:background="@drawable/ic_check_circle_96dp"/>
-</FrameLayout>
+</LinearLayout>
