--- a/app/src/main/res/layout/fragment_edit_todo.xml
+++ b/app/src/main/res/layout/fragment_edit_todo.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/title"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/editing_title"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="@string/title"
+            android:autofillHints="@string/title"
+            android:inputType="text" />
+        <EditText
+            android:id="@+id/editing_task"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:hint="@string/task"
+            android:autofillHints="@string/task"
+            android:inputType="text" />
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/circle_option_done_edit"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/ic_circle_checkmark"/>
+
+</FrameLayout>
