--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -5,11 +5,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     tools:context=".ui.MainActivity">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todo_recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/all_tasks_title"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorTextPrimary"
+            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content"
+            android:text="@string/all_tasks"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todo_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/empty_todo_list_container"
